--- a/sass/components/header-page/_logo.scss
+++ b/sass/components/header-page/_logo.scss
@@ -15,6 +15,6 @@
   color: var(--black100);
 }
 
-.logo__black--white {
-    color: var(--tertiary-color-text);
-}
+// .logo__black--white {
+//     color: var(--tertiary-color-text);
+// }
