--- a/css/main.css
+++ b/css/main.css
@@ -224,8 +224,7 @@ p {
 
 .container {
   width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0px 15px;
   margin: 0 auto;
 }
 
