--- a/css/main.css
+++ b/css/main.css
@@ -223,15 +223,10 @@ p {
 }
 
 .container {
-  width: 1200px;
+  min-width: 320px;
+  max-width: 480px;
   padding: 0px 15px;
   margin: 0 auto;
-}
-
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
 }
 
 @media screen and (min-width: 768px) {
