--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,13 +1,8 @@
 .container {
-  width: 1200px;
-  // padding-left: 15px;
-  // padding-right: 15px;
+  min-width: 320px;
+  max-width: 480px;
   padding: 0px 15px;
   margin: 0 auto;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
 
   @media screen and (min-width: 768px) {
     width: 768px;
