--- a/css/main.css
+++ b/css/main.css
@@ -232,12 +232,14 @@ p {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    background-color: red;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
+    background-color: yellowgreen;
   }
 }
 
