--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -17,3 +17,6 @@
   --primary-font-family: 'Roboto', sans-serif;
   --secondary-font-family: 'Raleway', sans-serif;
 }
+
+$table-breakpoint-min-width: 768px;
+$desktop-breakpoint-min-width: 1200px;
