added max widht

--- a/sass/components/header-page/_header-nav.scss
+++ b/sass/components/header-page/_header-nav.scss
@@ -1,33 +1,37 @@
-// .header-nav {
-//   @include centeredFlex ();
-//   margin-left: 90px;
-// }
+.header-nav {
+  @include centeredFlex();
+  margin-left: 90px;
 
-// .header-nav__item {
-//   position: relative;
+  @media screen and (max-width: $table-breakpoint-min-width) {
+    display: none;
+  }
+}
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
+.header-nav__item {
+  position: relative;
 
-// .header-nav__item:not(:first-child) {
-//   margin-left: 50px;
-// }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
 
-// .header-nav__link {
-//   display: flex;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   color: var(--primary-color-text);
-//   padding: 32px 0px;
+.header-nav__item:not(:first-child) {
+  margin-left: 50px;
+}
 
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.header-nav__link {
+  display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--primary-color-text);
+  padding: 32px 0px;
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
