--- a/css/main.css
+++ b/css/main.css
@@ -232,14 +232,12 @@ p {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
-    background-color: red;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
-    background-color: yellowgreen;
   }
 }
 
@@ -257,6 +255,10 @@ p {
   overflow: hidden;
 }
 
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -270,6 +272,110 @@ p {
 
 .logo__black {
   color: var(--black100);
+}
+
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 90px;
+}
+
+@media screen and (max-width: 768px) {
+  .header-nav {
+    display: none;
+  }
+}
+
+.header-nav__item {
+  position: relative;
+}
+
+.header-nav__item:hover, .header-nav__item:focus {
+  color: var(--accent-color);
+}
+
+.header-nav__item:not(:first-child) {
+  margin-left: 50px;
+}
+
+.header-nav__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--primary-color-text);
+  padding: 32px 0px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav__link:hover, .header-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.contact-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .contact-link {
+    display: none;
+  }
+}
+
+.contact-link__item:last-child {
+  margin-left: 50px;
+}
+
+.contact-link__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--secondary-color-text);
+  padding-top: 33px;
+  padding-bottom: 31px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-link__link:focus, .contact-link__link:hover {
+  color: var(--accent-color);
+}
+
+.contact-link__icon {
+  fill: #757575;
+  margin-right: 10px;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-link__link:hover .contact-link__icon,
+.contact-link__link:focus .contact-link__icon {
+  fill: var(--accent-color);
+  cursor: pointer;
 }
 
 .hero {
