--- a/sass/components/header-page/_header.scss
+++ b/sass/components/header-page/_header.scss
@@ -1,8 +1,7 @@
-// .header {
-//   border-bottom: 1px solid rgb(236, 236, 236);
-// }
+.header {
+  border-bottom: 1px solid rgb(236, 236, 236);
+}
 
 // .header__container {
-//   @include centeredFlex ($justify-content:space-between);
-
+//   @include centeredFlex($justify-content: space-between);
 // }
