--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,12 @@ p {
   border-bottom: 1px solid #ececec;
 }
 
+@media screen and (min-width: 768px) {
+  .header-button {
+    display: none;
+  }
+}
+
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
