--- a/sass/components/header-page/_header.scss
+++ b/sass/components/header-page/_header.scss
@@ -2,11 +2,18 @@
   border-bottom: 1px solid rgb(236, 236, 236);
 }
 
-// .header__container {
-//   @include centeredFlex($justify-content: space-between);
-// }
+.header__container {
+  @include centeredFlex($justify-content: space-between);
+}
 
 .header-button {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+
   @media screen and (min-width: $table-breakpoint-min-width) {
     display: none;
   }
