--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,9 @@ p {
           align-items: center;
   background-color: transparent;
   border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
