--- a/sass/components/header-page/_header.scss
+++ b/sass/components/header-page/_header.scss
@@ -13,6 +13,7 @@
   align-items: center;
   background-color: transparent;
   border: none;
+  justify-content: center;
 
   @media screen and (min-width: $table-breakpoint-min-width) {
     display: none;
