--- a/css/main.css
+++ b/css/main.css
@@ -436,8 +436,8 @@ p {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/backgroung.jpg);
-  background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/backgroung.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/backgroung@2x.jpg);
+  background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/backgroung@2x.jpg);
 }
 
 .hero__btn {
