--- a/css/main.css
+++ b/css/main.css
@@ -602,23 +602,16 @@ p {
 }
 
 .our-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0px;
   background-color: var(--background-btn-portfolio);
 }
 
 .our-team__title {
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.17;
   margin-top: 0px;
   margin-bottom: 50px;
-}
-
-.team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-align: center;
 }
 
 .team-list__card {
@@ -627,12 +620,26 @@ p {
   border-radius: 4px;
 }
 
-.team-list__card:not(:first-child) {
-  margin-left: 30px;
+.team-list__card:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.team-list__thumb {
+  width: 450px;
+  height: 460px;
+  overflow: hidden;
+}
+
+.team-list__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .team-list__name {
   background-color: var(--tertiary-color-text);
+  text-align: center;
 }
 
 .team-list__title {
@@ -659,13 +666,10 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 16px 32px 30px 32px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 16px 122px 24px 122px;
   border-radius: 0px 0px 4px 4px;
   background-color: var(--tertiary-color-text);
 }
