--- a/sass/components/web-studio-content/_our-team.scss
+++ b/sass/components/web-studio-content/_our-team.scss
@@ -1,12 +1,12 @@
 .our-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0px;
   background-color: var(--background-btn-portfolio);
 }
 
 .our-team__title {
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.17;
   margin-top: 0px;
   margin-bottom: 50px;
 }
