--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -1,7 +1,6 @@
-.team-list {
-  display: flex;
-  text-align: center;
-}
+// .team-list {
+//   display: flex;
+// }
 
 .team-list__card {
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
@@ -9,12 +8,25 @@
   border-radius: 4px;
 }
 
-.team-list__card:not(:first-child) {
-  margin-left: 30px;
+.team-list__card:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.team-list__thumb {
+  width: 450px;
+  height: 460px;
+  overflow: hidden;
+}
+
+.team-list__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .team-list__name {
   background-color: var(--tertiary-color-text);
+  text-align: center;
 }
 
 .team-list__title {
