--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -5,7 +5,7 @@
 .team-list__card {
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .team-list__card:not(:last-child) {
@@ -27,6 +27,7 @@
 .team-list__name {
   background-color: var(--tertiary-color-text);
   text-align: center;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .team-list__title {
