--- a/sass/components/web-studio-content/_our-clients.scss
+++ b/sass/components/web-studio-content/_our-clients.scss
@@ -1,22 +1,22 @@
 .our-clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .our-clients__title {
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   margin-bottom: 50px;
   margin-top: 0;
   color: var(--primary-color-text);
 }
 
-.clients-list {
-  display: flex;
-  justify-content: space-between;
-}
+// .clients-list {
+//   display: flex;
+//   justify-content: space-between;
+// }
 
 .clients-list__item {
   width: 170px;
@@ -28,7 +28,7 @@
 
   &:hover,
   &:focus {
-       border: 1px solid var(--accent-color);
+    border: 1px solid var(--accent-color);
   }
 }
 
@@ -45,9 +45,9 @@
 .clients-list__icon {
   fill: inherit;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+
   .clients-list__link:hover &,
   .clients-list__link:focus & {
-      fill: var(--accent-color);
+    fill: var(--accent-color);
   }
 }
