--- a/css/main.css
+++ b/css/main.css
@@ -716,8 +716,22 @@ p {
   color: var(--primary-color-text);
 }
 
+.clients-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+
 .clients-list__item {
-  width: 170px;
+  margin-top: 30px;
+  margin-left: 30px;
+  -ms-flex-preferred-size: calc((100% / 2 - 30px));
+      flex-basis: calc((100% / 2 - 30px));
+  width: 210px;
   height: 90px;
   border: 1px solid var(--inactive-color-button);
   border-radius: 5px;
