--- a/sass/components/web-studio-content/_our-clients.scss
+++ b/sass/components/web-studio-content/_our-clients.scss
@@ -13,13 +13,19 @@
   color: var(--primary-color-text);
 }
 
-// .clients-list {
-//   display: flex;
-//   justify-content: space-between;
-// }
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+  // justify-content: space-between;
+}
 
 .clients-list__item {
-  width: 170px;
+  margin-top: 30px;
+  margin-left: 30px;
+  flex-basis: calc((100% / 2 - 30px));
+  width: 210px;
   height: 90px;
   border: 1px solid var(--inactive-color-button);
   border-radius: 5px;
