--- a/sass/components/footer-page/_subscription.scss
+++ b/sass/components/footer-page/_subscription.scss
@@ -5,30 +5,32 @@
   text-transform: uppercase;
   color: var(--tertiary-color-text);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .subscription__form {
-  display: flex;
+  display: block;
 }
 
 .subscription__input {
   display: flex;
-  width: 358px;
+  max-width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: var(--background-hero);
   color: var(--tertiary-color-text);
   padding-left: 16px;
+  margin-bottom: 20px;
 }
 
 .subscription__btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: flex;
+  // align-items: center;
+  // justify-content: center;
   width: 200px;
   height: 50px;
-  margin-left: 12px;
+  // margin-left: 12px;
   background-color: var(--accent-color);
   border-radius: 4px;
   border: none;
