--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,12 @@ p {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .logo__blue {
@@ -306,6 +312,10 @@ p {
 
 .logo__black {
   color: var(--black100);
+}
+
+.logo__black--white {
+  color: var(--tertiary-color-text);
 }
 
 .header-nav {
@@ -779,16 +789,8 @@ p {
   margin-top: 0px;
 }
 
-.footer-container__centered {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.address {
+  text-align: center;
 }
 
 .address__text {
@@ -820,6 +822,9 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -835,9 +840,9 @@ p {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .social-network__item:not(:last-child) {
@@ -875,40 +880,33 @@ p {
   text-transform: uppercase;
   color: var(--tertiary-color-text);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .subscription__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
 }
 
 .subscription__input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 358px;
+  max-width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: var(--background-hero);
   color: var(--tertiary-color-text);
   padding-left: 16px;
+  margin-bottom: 20px;
 }
 
 .subscription__btn {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 200px;
   height: 50px;
-  margin-left: 12px;
   background-color: var(--accent-color);
   border-radius: 4px;
   border: none;
