--- a/sass/components/footer-page/_social-network.scss
+++ b/sass/components/footer-page/_social-network.scss
@@ -1,5 +1,6 @@
 .social-network__text {
   display: flex;
+  justify-content: center;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -8,10 +9,10 @@
   margin-bottom: 20px;
 }
 
-.social-network__list{
+.social-network__list {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .social-network__item:not(:last-child) {
