--- a/sass/components/footer-page/_social-network.scss
+++ b/sass/components/footer-page/_social-network.scss
@@ -3,12 +3,11 @@
 }
 
 .social-network__text {
-  display: flex;
-  justify-content: center;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
+  text-align: center;
   color: var(--tertiary-color-text);
   margin-bottom: 20px;
 }
