--- a/sass/components/footer-page/_subscription.scss
+++ b/sass/components/footer-page/_subscription.scss
@@ -9,7 +9,8 @@
 }
 
 .subscription__form {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .subscription__input {
@@ -26,6 +27,8 @@
 
 .subscription__btn {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   // align-items: center;
   // justify-content: center;
   width: 200px;
