--- a/css/main.css
+++ b/css/main.css
@@ -285,12 +285,20 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  fill: #000000;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
   .header-button {
     display: none;
   }
+}
+
+.header-button:hover,
+.header-button:focus {
+  fill: var(--accent-color);
 }
 
 .logo {
