--- a/sass/components/header-page/_header.scss
+++ b/sass/components/header-page/_header.scss
@@ -14,8 +14,15 @@
   background-color: transparent;
   border: none;
   justify-content: center;
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: $table-breakpoint-min-width) {
     display: none;
   }
+}
+
+.header-button:hover,
+.header-button:focus {
+  fill: var(--accent-color);
 }
