--- a/css/main.css
+++ b/css/main.css
@@ -290,15 +290,14 @@ p {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-button:hover, .header-button:focus {
+  fill: var(--accent-color);
+}
+
 @media screen and (min-width: 768px) {
   .header-button {
     display: none;
   }
-}
-
-.header-button:hover,
-.header-button:focus {
-  fill: var(--accent-color);
 }
 
 .logo {
