--- a/sass/components/header-page/_contact-link.scss
+++ b/sass/components/header-page/_contact-link.scss
@@ -1,7 +1,7 @@
 .contact-link {
   @include centeredFlex();
 
-  @media screen and (max-width: $table-breakpoint-min-width) {
+  @media screen and (max-width: 767px) {
     display: none;
   }
 }
