--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@ p {
 
 .container {
   min-width: 320px;
-  max-width: 480px;
+  width: 480px;
   padding: 0px 15px;
   margin: 0 auto;
 }
@@ -342,7 +342,7 @@ p {
   margin-left: 90px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header-nav {
     display: none;
   }
@@ -389,7 +389,7 @@ p {
           justify-content: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .contact-link {
     display: none;
   }
