--- a/sass/components/header-page/_header-nav.scss
+++ b/sass/components/header-page/_header-nav.scss
@@ -2,7 +2,7 @@
   @include centeredFlex();
   margin-left: 90px;
 
-  @media screen and (max-width: $table-breakpoint-min-width) {
+  @media screen and (max-width: 767px) {
     display: none;
   }
 }
