--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,20 @@ p {
   color: var(--tertiary-color-text);
 }
 
+@media screen and (min-width: 768px) {
+  .nav-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .header-nav {
   display: -webkit-box;
   display: -ms-flexbox;
