--- a/sass/components/header-page/_nav-menu.scss
+++ b/sass/components/header-page/_nav-menu.scss
@@ -1,3 +1,5 @@
-// .nav-menu {
-//     @include centeredFlex();
-// }
+.nav-menu {
+  @media screen and (min-width: 768px) {
+    @include centeredFlex();
+  }
+}
