--- a/css/main.css
+++ b/css/main.css
@@ -223,10 +223,14 @@ p {
 }
 
 .container {
-  min-width: 320px;
-  width: 480px;
   padding: 0px 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -282,6 +286,7 @@ p {
           align-items: center;
   background-color: transparent;
   border: none;
+  margin: 10px 0px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -311,10 +316,6 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.header__logo--padding {
-  padding: 16px 0px;
 }
 
 .logo__blue {
@@ -353,7 +354,7 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-left: 90px;
+  margin-left: 88px;
 }
 
 @media screen and (max-width: 767px) {
@@ -391,16 +392,19 @@ p {
   color: var(--accent-color);
 }
 
-.contact-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.header-nav__link--current {
+  color: var(--accent-color);
+}
+
+.header-nav__link--current::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: -1px;
+  left: 0;
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -409,8 +413,15 @@ p {
   }
 }
 
-.contact-link__item:last-child {
-  margin-left: 50px;
+@media screen and (min-width: 767px) {
+  .contact-link {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.contact-link__item:first-child {
+  margin-bottom: 10px;
 }
 
 .contact-link__link {
@@ -418,8 +429,6 @@ p {
   font-size: 14px;
   line-height: 1.14;
   color: var(--secondary-color-text);
-  padding-top: 33px;
-  padding-bottom: 31px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
