--- a/sass/components/header-page/_contact-link.scss
+++ b/sass/components/header-page/_contact-link.scss
@@ -1,13 +1,19 @@
 .contact-link {
-  @include centeredFlex();
-
   @media screen and (max-width: 767px) {
     display: none;
   }
+
+  @media screen and (min-width: 767px) {
+    flex-wrap: wrap;
+  }
 }
 
-.contact-link__item:last-child {
-  margin-left: 50px;
+// .contact-link__item:last-child {
+//   margin-left: 50px;
+// }
+
+.contact-link__item:first-child {
+  margin-bottom: 10px;
 }
 
 .contact-link__link {
@@ -15,11 +21,12 @@
   font-size: 14px;
   line-height: 1.14;
   color: var(--secondary-color-text);
-  padding-top: 33px;
-  padding-bottom: 31px;
   display: flex;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  // padding-top: 33px;
+  // padding-bottom: 31px;
 
   &:focus,
   &:hover {
