--- a/sass/components/header-page/_current-footer-menu.scss
+++ b/sass/components/header-page/_current-footer-menu.scss
@@ -1,14 +1,14 @@
-// .header-nav__link--current {
-//   color: var(--accent-color);
+.header-nav__link--current {
+  color: var(--accent-color);
 
-//   &::after {
-//   content: '';
-//   position: absolute;
-//   width: 100%;
-//   height: 4px;
-//   bottom: -1px;
-//   left: 0;
-//   border-radius: 2px;
-//   background-color: var(--accent-color);
-//   }
-// }
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: -1px;
+    left: 0;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
+}
