--- a/sass/components/header-page/_header.scss
+++ b/sass/components/header-page/_header.scss
@@ -3,7 +3,9 @@
 }
 
 .header__container {
-  @include centeredFlex($justify-content: space-between);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header-button {
@@ -13,6 +15,7 @@
   align-items: center;
   background-color: transparent;
   border: none;
+  margin: 10px 0px;
   justify-content: center;
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
