--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,8 +1,13 @@
 .container {
-  min-width: 320px;
-  width: 480px;
+  // min-width: 320px;
+  // max-width: 480px;
+  // width: 480px;
   padding: 0px 15px;
   margin: 0 auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 
   @media screen and (min-width: $table-breakpoint-min-width) {
     width: 768px;
