--- a/sass/components/header-page/_header-nav.scss
+++ b/sass/components/header-page/_header-nav.scss
@@ -1,5 +1,4 @@
 .header-nav {
-  // @include centeredFlex();
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,10 +16,10 @@
   &:focus {
     color: var(--accent-color);
   }
-}
 
-.header-nav__item:not(:first-child) {
-  margin-left: 50px;
+  &:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .header-nav__link {
