--- a/css/main.css
+++ b/css/main.css
@@ -491,6 +491,15 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .hero__img {
+    max-width: 768px;
+    height: 400px;
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/hero/hero_960@2x.jpg);
+    background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/hero/hero_960@2x.jpg);
+  }
+}
+
 .hero__btn {
   font-family: var(--primary-font-family);
   font-weight: 700;
