--- a/css/main.css
+++ b/css/main.css
@@ -539,6 +539,29 @@ p {
   overflow: hidden;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__object {
+    margin-top: 30px;
+    margin-left: 30px;
+    -ms-flex-preferred-size: calc((100% / 2 - 30px));
+        flex-basis: calc((100% / 2 - 30px));
+    width: 354px;
+    height: 120px;
+  }
+}
+
 .advantages__subtitle {
   font-weight: 700;
   font-size: 14px;
