--- a/sass/components/web-studio-content/_advantages.scss
+++ b/sass/components/web-studio-content/_advantages.scss
@@ -21,6 +21,12 @@
 }
 
 .advantages__list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
   // display: flex;
   // margin: 0;
   // padding: 0;
@@ -33,6 +39,16 @@
 // .advantages__object:not(:first-child) {
 //   margin-left: 30px;
 // }
+
+.advantages__object {
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    margin-left: 30px;
+    flex-basis: calc((100% / 2 - 30px));
+    width: 354px;
+    height: 120px;
+  }
+}
 
 .advantages__subtitle {
   font-weight: 700;
