--- a/sass/components/web-studio-content/_our-work.scss
+++ b/sass/components/web-studio-content/_our-work.scss
@@ -4,7 +4,7 @@
   padding-top: 0px;
   padding-bottom: 94px;
 
-  @media screen and (max-width: $desktop-breakpoint-min-width) {
+  @media screen and (max-width: 1119px) {
     display: none;
   }
 }
