--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -1,16 +1,27 @@
-// .team-list {
-//   display: flex;
-// }
+.team-list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+}
 
 .team-list__card {
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 5px 5px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    margin-left: 30px;
+    flex-basis: calc((100% / 2 - 30px));
+  }
 }
 
-.team-list__card:not(:last-child) {
-  margin-bottom: 30px;
-}
+// .team-list__card:not(:last-child) {
+//   margin-bottom: 30px;
+// }
 
 .team-list__thumb {
   max-width: 450px;
