--- a/css/main.css
+++ b/css/main.css
@@ -830,6 +830,13 @@ p {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    -ms-flex-preferred-size: calc((100% / 3 - 30px));
+        flex-basis: calc((100% / 3 - 30px));
+  }
+}
+
 .clients-list__item:hover, .clients-list__item:focus {
   border: 1px solid var(--accent-color);
 }
