--- a/sass/components/web-studio-content/_our-clients.scss
+++ b/sass/components/web-studio-content/_our-clients.scss
@@ -29,8 +29,11 @@
   height: 90px;
   border: 1px solid var(--inactive-color-button);
   border-radius: 5px;
-
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% / 3 - 30px));
+  }
 
   &:hover,
   &:focus {
