--- a/css/main.css
+++ b/css/main.css
@@ -705,6 +705,12 @@ p {
   border-radius: 0px 0px 5px 5px;
 }
 
+@media screen and (max-width: 767px) {
+  .team-list__card:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .team-list__card {
     margin-top: 30px;
