--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -12,6 +12,12 @@
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 5px 5px;
 
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
   @media screen and (min-width: 768px) {
     margin-top: 30px;
     margin-left: 30px;
