--- a/css/main.css
+++ b/css/main.css
@@ -882,6 +882,22 @@ p {
   margin-top: 0px;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-container__centered {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
 .address {
   text-align: center;
   margin-bottom: 60px;
@@ -912,8 +928,10 @@ p {
   color: var(--accent-color);
 }
 
-.social-network {
-  margin-bottom: 60px;
+@media screen and (min-width: 768px) {
+  .social-network {
+    margin-left: 165px;
+  }
 }
 
 .social-network__text {
