--- a/sass/components/footer-page/_footer.scss
+++ b/sass/components/footer-page/_footer.scss
@@ -5,8 +5,15 @@
   margin-top: 0px;
 }
 
-// .footer-container__centered {
-//   display: flex;
-//   align-items: baseline;
-//   justify-content: space-between;
-// }
+.footer-container__centered {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+  }
+
+  // display: flex;
+  // align-items: baseline;
+  // justify-content: space-between;
+}
