--- a/css/main.css
+++ b/css/main.css
@@ -1005,9 +1005,6 @@ p {
 }
 
 .subscription__input {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   max-width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1016,6 +1013,12 @@ p {
   color: var(--tertiary-color-text);
   padding-left: 16px;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .subscription__input {
+    width: 450px;
+  }
 }
 
 .subscription__btn {
