--- a/sass/components/footer-page/_subscription.scss
+++ b/sass/components/footer-page/_subscription.scss
@@ -14,7 +14,7 @@
 }
 
 .subscription__input {
-  display: flex;
+  // display: flex;
   max-width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -23,6 +23,10 @@
   color: var(--tertiary-color-text);
   padding-left: 16px;
   margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
 }
 
 .subscription__btn {
