--- a/css/main.css
+++ b/css/main.css
@@ -493,6 +493,13 @@ p {
   color: var(--tertiary-color-text);
 }
 
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 .hero__img {
   max-width: 480px;
   height: 400px;
