--- a/sass/components/web-studio-content/_hero.scss
+++ b/sass/components/web-studio-content/_hero.scss
@@ -12,6 +12,11 @@
   text-transform: uppercase;
   letter-spacing: 0.06em;
   color: var(--tertiary-color-text);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__img {
