--- a/css/main.css
+++ b/css/main.css
@@ -746,6 +746,13 @@ p {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .team-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
 .team-list__card {
   -webkit-box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -771,6 +778,20 @@ p {
   max-width: 450px;
   height: 460px;
   overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .team-list__thumb {
+    max-width: 354px;
+    height: 374px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list__thumb {
+    max-width: 270px;
+    height: 260px;
+  }
 }
 
 .team-list__img {
