--- a/sass/components/web-studio-content/_our-team.scss
+++ b/sass/components/web-studio-content/_our-team.scss
@@ -1,6 +1,10 @@
 .our-team {
   padding: 60px 0px;
   background-color: var(--background-btn-portfolio);
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0px;
+  }
 }
 
 .our-team__title {
