--- a/css/main.css
+++ b/css/main.css
@@ -873,8 +873,13 @@ p {
 }
 
 .our-clients {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 60px 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-clients {
+    padding: 94px 0px;
+  }
 }
 
 .our-clients__title {
@@ -895,6 +900,13 @@ p {
       flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .clients-list__item {
