--- a/sass/components/footer-page/_address.scss
+++ b/sass/components/footer-page/_address.scss
@@ -1,6 +1,9 @@
 .address {
   text-align: center;
-  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .address__text {
