--- a/sass/components/footer-page/_footer.scss
+++ b/sass/components/footer-page/_footer.scss
@@ -1,7 +1,6 @@
 .footer {
   background-color: var(--background-hero);
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 60px 0px;
   margin-top: 0px;
 }
 
@@ -11,6 +10,11 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: baseline;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    justify-content: space-between;
   }
 
   // display: flex;
