--- a/sass/components/footer-page/_social-network.scss
+++ b/sass/components/footer-page/_social-network.scss
@@ -3,6 +3,10 @@
     margin-left: 165px;
   }
 
+  @media screen and (min-width: 1200px) {
+    margin-left: 0px;
+  }
+
   // margin-bottom: 60px;
 }
 
