--- a/sass/components/header-page/_logo.scss
+++ b/sass/components/header-page/_logo.scss
@@ -5,6 +5,10 @@
   line-height: 1.16;
   display: flex;
   justify-content: center;
+
+  @media screen and (min-width: 1200px) {
+    justify-content: start;
+  }
 }
 
 .logo__blue {
