--- a/sass/components/footer-page/_address.scss
+++ b/sass/components/footer-page/_address.scss
@@ -1,6 +1,11 @@
+.footer-address {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+}
+
 .address {
   text-align: center;
-
   @media screen and (min-width: 1200px) {
     text-align: start;
   }
