--- a/sass/components/footer-page/_social-network.scss
+++ b/sass/components/footer-page/_social-network.scss
@@ -1,4 +1,8 @@
 .social-network {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
   @media screen and (min-width: 768px) {
     margin-left: 165px;
   }
@@ -6,8 +10,6 @@
   @media screen and (min-width: 1200px) {
     margin-left: 0px;
   }
-
-  // margin-bottom: 60px;
 }
 
 .social-network__text {
