--- a/sass/components/web-portfolio-content/_buttons-menu.scss
+++ b/sass/components/web-portfolio-content/_buttons-menu.scss
@@ -1,13 +1,34 @@
 .buttons-menu {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+
+  @media screen and (max-width: 767px) {
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
-.buttons-menu__item:not(:first-child) {
-  margin-left: 8px;
+.buttons-menu__item {
+  @media screen and (max-width: 767px) {
+    &:nth-child(n + 4) {
+      margin-top: 10px;
+    }
+  }
+
+  &:not(:first-child) {
+    margin-left: 8px;
+  }
 }
-  
+
 .buttons-menu__btn {
   font-family: var(--primary-font-family);
   font-weight: 500;
@@ -25,11 +46,11 @@
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     background-color: var(--accent-color);
     color: var(--tertiary-color-text);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
-}
+  }
 }
