--- a/css/main.css
+++ b/css/main.css
@@ -1368,6 +1368,13 @@ p {
   overflow: hidden;
 }
 
+.cards-thumb__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .cards-content__backdrop {
   position: absolute;
   top: 0;
