--- a/css/main.css
+++ b/css/main.css
@@ -1313,11 +1313,25 @@ p {
 }
 
 .cards__item {
-  -ms-flex-preferred-size: calc(100% / 3 - 30px);
-      flex-basis: calc(100% / 3 - 30px);
+  -ms-flex-preferred-size: calc(100% / 1 - 30px);
+      flex-basis: calc(100% / 1 - 30px);
   margin-top: 30px;
   margin-left: 30px;
   border: 1px solid var(--border-color);
+}
+
+@media screen and (min-width: 768px) {
+  .cards__item {
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .cards__item {
+    -ms-flex-preferred-size: calc(100% / 3 - 30px);
+        flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .cards__link {
@@ -1359,12 +1373,6 @@ p {
 
 .cards-content {
   position: relative;
-  overflow: hidden;
-}
-
-.cards-thumb {
-  width: 465px;
-  height: 294px;
   overflow: hidden;
 }
 
