--- a/sass/components/web-portfolio-content/_cards-portfolio.scss
+++ b/sass/components/web-portfolio-content/_cards-portfolio.scss
@@ -20,6 +20,19 @@
   }
 }
 
+.cards-thumb {
+  width: 450px;
+  height: 294px;
+
+  @media screen and (min-width: 768px) {
+    width: 352px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 368px;
+  }
+}
+
 .cards__link {
   display: block;
   width: 100%;
