--- a/css/main.css
+++ b/css/main.css
@@ -698,17 +698,9 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.list-work__item {
-  margin-right: 30px;
-}
-
-.list-work__item:last-child {
-  margin-right: 30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .list-work__thumb {
