added mobile menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,8 +39,5 @@
 @import 'components/modal/input-form';
 @import 'components/modal/checkbox';
 @import 'components/modal/submit-btn';
-
-
-
-
-
+// Mobile menu
+@import 'components/mobile-menu/mobile-menu';
