--- a/css/main.css
+++ b/css/main.css
@@ -1685,4 +1685,16 @@ p {
 .submit-btn:hover {
   cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .mobile-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--tertiary-color-text);
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
+}
 /*# sourceMappingURL=main.css.map */
