--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -9,4 +9,13 @@
     overflow: hidden;
   }
 }
+
+.mobile-nav {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: red;
+}
 /*# sourceMappingURL=mobile-menu.css.map */
