--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -9,3 +9,17 @@
     overflow: hidden;
   }
 }
+
+.mobile-nav {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: red;
+
+  //   &:hover,
+  //   &:focus {
+  //     color: var(--accent-color);
+  //   }
+}
