--- a/css/main.css
+++ b/css/main.css
@@ -1688,15 +1688,19 @@ p {
 
 @media screen and (max-width: 768px) {
   .mobile-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: var(--tertiary-color-text);
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-y: scroll;
     padding: 48px 40px;
   }
+}
+
+.nav-mobile-menu {
+  margin-bottom: 302px;
 }
 
 .mobile-nav__item:not(:last-child) {
@@ -1731,6 +1735,6 @@ p {
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
+  color: var(--secondary-color-text);
 }
 /*# sourceMappingURL=main.css.map */
