--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -1,14 +1,18 @@
 @media screen and (max-width: 768px) {
   .mobile-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: var(--tertiary-color-text);
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-y: scroll;
     padding: 48px 40px;
   }
+}
+
+.nav-mobile-menu {
+  margin-bottom: 302px;
 }
 
 .mobile-nav__item:not(:last-child) {
@@ -43,6 +47,12 @@
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
+  color: var(--secondary-color-text);
+}
+
+.mobile-social-network {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=mobile-menu.css.map */
