--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -32,6 +32,14 @@
   color: var(--accent-color);
 }
 
+.mobile-contact-link__item:first-child {
+  margin-bottom: 32px;
+}
+
+.mobile-contact-link__item:last-child {
+  margin-bottom: 64px;
+}
+
 .mobile-contact-link__link {
   font-style: normal;
   font-weight: 500;
