--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -64,7 +64,7 @@
   display: flex;
 }
 
-.mobile-social-network__item:not(:last-child)::after {
+.mobile-social-network__item .mobile-social-network__item:not(:last-child)::after {
   content: '';
   width: 0px;
   height: 22px;
