--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -64,7 +64,7 @@
   display: flex;
 }
 
-.mobile-social-network__item .mobile-social-network__item:not(:last-child)::after {
+.mobile-social-network__item:not(:last-child)::after {
   content: '';
   width: 0px;
   height: 22px;
@@ -73,5 +73,14 @@
           transform: rotate(90deg);
   margin-right: 10px;
   margin-left: 10px;
+}
+
+.mobile-social-network__link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
 /*# sourceMappingURL=mobile-menu.css.map */
