--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -63,7 +63,17 @@
   display: flex;
 }
 
-.mobile-social-network__item .mobile-social-network__item:not(:last-child) {
+// .mobile-social-network__link::after {
+//   content: '';
+//   width: 0px;
+//   height: 22px;
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   transform: rotate(90deg);
+//   margin-right: 10px;
+//   margin-left: 10px;
+// }
+
+.mobile-social-network__item:not(:last-child) {
   &::after {
     content: '';
     width: 0px;
@@ -73,4 +83,13 @@
     margin-right: 10px;
     margin-left: 10px;
   }
+}
+
+.mobile-social-network__link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
