--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -1,15 +1,19 @@
-@media screen and (max-width: 768px) {
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--tertiary-color-text);
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  padding: 48px 40px;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+@media screen and (min-width: 768px) {
   .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: var(--tertiary-color-text);
-    width: 100vw;
-    height: 100vh;
-    overflow-y: scroll;
-    padding: 48px 40px;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
+    display: none;
   }
 }
 
