added current for mobile nav

--- a/css/main.css
+++ b/css/main.css
@@ -1756,6 +1756,10 @@ p {
   color: var(--accent-color);
 }
 
+.mobile-nav__link--current {
+  color: var(--accent-color);
+}
+
 .mobile-contact-link {
   margin-bottom: 64px;
 }
