--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -58,6 +58,10 @@
   color: var(--accent-color);
 }
 
+.mobile-nav__link--current {
+  color: var(--accent-color);
+}
+
 .mobile-contact-link {
   margin-bottom: 64px;
 }
