--- a/sass/components/web-portfolio-content/_buttons-menu.scss
+++ b/sass/components/web-portfolio-content/_buttons-menu.scss
@@ -54,3 +54,8 @@
     cursor: pointer;
   }
 }
+
+.buttons-menu__btn--current {
+  background-color: var(--accent-color);
+  color: var(--tertiary-color-text);
+}
