--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -5,7 +5,7 @@
   background-color: var(--tertiary-color-text);
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
+  overflow: hidden;
   padding: 48px 40px;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
