added max-width for portfolio

--- a/css/main.css
+++ b/css/main.css
@@ -1343,19 +1343,19 @@ p {
 }
 
 .cards-thumb {
-  width: 450px;
+  max-width: 450px;
   height: 294px;
 }
 
 @media screen and (min-width: 768px) {
   .cards-thumb {
-    width: 352px;
+    max-width: 352px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .cards-thumb {
-    width: 368px;
+    max-width: 368px;
   }
 }
 
