--- a/sass/components/web-portfolio-content/_cards-portfolio.scss
+++ b/sass/components/web-portfolio-content/_cards-portfolio.scss
@@ -21,15 +21,15 @@
 }
 
 .cards-thumb {
-  width: 450px;
+  max-width: 450px;
   height: 294px;
 
   @media screen and (min-width: 768px) {
-    width: 352px;
+    max-width: 352px;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 368px;
+    max-width: 368px;
   }
 }
 
