--- a/sass/components/header-page/_header.scss
+++ b/sass/components/header-page/_header.scss
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   background-color: transparent;
+  padding: 0px;
   border: none;
   margin: 10px 0px;
   justify-content: center;
