deleted span from logo

--- a/css/main.css
+++ b/css/main.css
@@ -317,6 +317,7 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  color: var(--accent-color);
 }
 
 @media screen and (min-width: 1200px) {
