--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -38,10 +38,6 @@
   padding: 0px;
 }
 
-.nav-mobile-menu {
-  margin-bottom: 302px;
-}
-
 .mobile-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -93,6 +89,8 @@
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .mobile-social-network__item:not(:last-child)::after {
