--- a/css/main.css
+++ b/css/main.css
@@ -320,6 +320,12 @@ p {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    padding: 26px 0px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .logo {
     -webkit-box-pack: start;
@@ -327,6 +333,7 @@ p {
             justify-content: start;
     font-size: 26px;
     line-height: 1.19;
+    padding: 0px;
   }
 }
 
