--- a/sass/components/header-page/_contact-link.scss
+++ b/sass/components/header-page/_contact-link.scss
@@ -20,7 +20,9 @@
 }
 
 .contact-link__item:last-child {
-  padding-bottom: 20px;
+  @media screen and (max-width: 1200px) {
+    padding-bottom: 20px;
+  }
 }
 
 .contact-link__link {
